@@ -1,0 +1,7 @@
+CORE
+integer_literals1.sv
+
+^EXIT=0$
+^SIGNAL=0$
+--
+^warning: ignoring
